[project]
name = "music-as-a-time-series-with-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pytest>=8.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
